--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -1,5 +1,5 @@
 # Rust
 ## Rustlings-exercises-variables
-Rust的变量默认不可变且必须赋初值  
-`let x = 0;`  
-这就定义好了一个变量x,他的初值为0且x不能被改变
+Rust的变量**默认不可变**且必须**赋初值**  
+`let x = 0;` 这就定义好了一个变量`x`,他的初值为0且`x`不能被改变。若想生成一个可改变的变量，需要手动添加`mut`  
+`let mut x = 0` 这样定义了一个可改变的变量`x`
