--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -2,4 +2,8 @@
 ## Rustlings-exercises-variables
 ### Rust的变量**默认不可变**且必须**赋初值**  
 `let x = 0;`，这就定义好了一个变量`x`,他的初值为0且`x`不能被改变。若想生成一个可改变的变量，需要手动添加`mut`。  
-`let mut x = 0`，这样定义了一个可改变的变量`x`，我们可能会发现这里`x`没有变量类型，实际上通过初始化编译器推断了`x`的类型为`i32`,当然我们也可以为`x`指定类型:`let x:i32 = 0`。  ### 使用下划线开头忽略未使用的变量
+`let mut x = 0`，这样定义了一个可改变的变量`x`，我们可能会发现这里`x`没有变量类型，实际上通过初始化编译器推断了`x`的类型为`i32`,当然我们也可以为`x`指定类型:`let x:i32 = 0`。
+### 使用下划线开头忽略未使用的变量
+Rust中如果你定义了一个未被使用的变量
+``` let y = 0;```，编译器会给你警告，当然如果要避免这种警告，只需要在变量前添加一个下划线即可:```let _x = 0;```  
+
