--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -7,3 +7,4 @@
 Rust中如果你定义了一个未被使用的变量
 ``` let y = 0;```，编译器会给你警告，当然如果要避免这种警告，只需要在变量前添加一个下划线即可:```let _x = 0;```  
 ## Rustlings-exercises-Functions
+![函数总览](https://github.com/gongchaosheng/2022-os/blob/main/Pictures/11.5.png)
