--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -6,5 +6,16 @@
 ### 使用下划线开头忽略未使用的变量
 Rust中如果你定义了一个未被使用的变量
 ``` let y = 0;```，编译器会给你警告，当然如果要避免这种警告，只需要在变量前添加一个下划线即可:```let _x = 0;```  
+## 所有权和借用
+目前的编程语言中关于内存管理主要有三种流派：  
++ **垃圾回收机制(GC)**，在程序运行时不断寻找不再使用的内存，典型代表：Java、Go
++ **手动管理内存的分配和释放**, 在程序中，通过函数调用的方式来申请和释放内存，典型代表：C++
++ **通过所有权来管理内存**，编译器在编译时会根据一系列规则进行检查，Rust就是采用的这一方案,这种检查只发生在编译期，因此对于程序运行期，不会有任何性能上的损失。
+
 ## Rustlings-exercises-Functions
 ![函数总览](https://github.com/gongchaosheng/2022-os/blob/main/Pictures/11.5.png)
+### 基本概念
++ 函数参数、返回值要标注类型
++ 函数位置随便放
++ 以最后一个表达式的值为返回值
+
