--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -11,6 +11,7 @@ Rust中如果你定义了一个未被使用的变量
 + **垃圾回收机制(GC)**，在程序运行时不断寻找不再使用的内存，典型代表：Java、Go
 + **手动管理内存的分配和释放**, 在程序中，通过函数调用的方式来申请和释放内存，典型代表：C++
 + **通过所有权来管理内存**，编译器在编译时会根据一系列规则进行检查，Rust就是采用的这一方案,这种检查只发生在编译期，因此对于程序运行期，不会有任何性能上的损失。
+**以字符串为例来考虑所有权问题**  
 
 ## Rustlings-exercises-Functions
 ![函数总览](https://github.com/gongchaosheng/2022-os/blob/main/Pictures/11.5.png)
