--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -12,7 +12,19 @@ Rust中如果你定义了一个未被使用的变量
 +    **手动管理内存的分配和释放**, 在程序中，通过函数调用的方式来申请和释放内存，典型代表：C++
 +    **通过所有权来管理内存**，编译器在编译时会根据一系列规则进行检查，Rust就是采用的这一方案,这种检查只发生在编译期，因此对于程序运行期，不会有任何性能上的损失。
   
-**以字符串为例来考虑所有权问题**  
+以字符串为例来考虑所有权问题  
+字符串字面值```let s = "hello"```类型为`&str`,但是它并不适用于所有情况，原因是
++ 字符串字面值是不可变的
++ 并非所有字符串都能在编码时得知
+
+例如，字符串是需要程序运行时，通过用户动态输入然后存储在内存中的，这种情况，字符串字面值就完全无用武之地。 为此，Rust 为我们提供动态字符串类型: String, 该类型被分配到堆上，因此可以动态伸缩，也就能存储在编译时大小未知的文本,我们使用以下方法创建String类型：  
+```let s = String::from("hello")```  
+或者我们也可以这样转变一个字符串字面值为String类型:  
+``` let s = "hello";
+    s.to_string();
+```  
+String类型
+   
 
 ## Rustlings-exercises-Functions
 ![函数总览](https://github.com/gongchaosheng/2022-os/blob/main/Pictures/11.5.png)
