--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -20,7 +20,8 @@ Rust中如果你定义了一个未被使用的变量
 例如，字符串是需要程序运行时，通过用户动态输入然后存储在内存中的，这种情况，字符串字面值就完全无用武之地。 为此，Rust 为我们提供动态字符串类型: String, 该类型被分配到堆上，因此可以动态伸缩，也就能存储在编译时大小未知的文本,我们使用以下方法创建String类型：  
 ```let s = String::from("hello")```  
 或者我们也可以这样转变一个字符串字面值为String类型:  
-``` let s = "hello";
+``` 
+    let s = "hello";
     s.to_string();
 ```  
 String类型
