--- a/Diary/11.5.md
+++ b/Diary/11.5.md
@@ -64,7 +64,23 @@ println!("s1 = {}, s2 = {}", s1, s2);
 }
 ```
 **关于浅拷贝**  
+```
+fn main() {
+let x = 5;
+let y = x;
 
+println!("x = {}, y = {}", x, y);
+}
+```
+这样是被允许的，原因是x的数据类型是i32，编译时大小已知，会被存储在栈上。这时的复制是把栈上的值拷贝了一份给`y`，并没有发生`x`和`y`都指向同一块空间的情况。  
+`Rust`有一个叫做`Copy`的特征，可以用在类似整型这样在栈中存储的类型。如果一个类型拥有`Copy`特征，一个旧的变量在被赋值给其他变量后仍然可用。  
+任何基本类型的组合都可以`Copy`，不需要分配内存或某种形式资源的类型是可以`Copy`的。
++ 整数类型，比如 u32。
++ 布尔类型，bool，它的值是 true 和 false。
++ 所有浮点数类型，比如 f64。
++ 字符类型，char。
++ 元组，当且仅当其包含的类型也都是 Copy 的时候。比如，(i32, i32) 是 Copy 的，但 (i32, String) 就不是。
++ 不可变引用 &T ，例如转移所有权中的最后一个例子，但是注意: 可变引用 &mut T 是不可以 Copy的
 
 
 
