--- a/Diary/11.16.md
+++ b/Diary/11.16.md
@@ -1,1 +1,12 @@
-
+# Rust
+## Rustlings-Exercises-move_semantics
+### 动态数组`vector`
+`let v: Vec<i32> = Vec::new();`可以创建一个不可改变的`vector`，这里需要显式的说明`v`的数据类型。  
+```
+  let mut v = Vec::new();
+  v.push(1);
+ ```
+ 这创建了一个可改变的`vector`，开始时不用说明`v`的数据类型，在`push`时可以推断出来`i32`。  
+ 关于访问`vector`中的元素:  
+ + 下标访问。`let c: &i32 = &v[2]`，`vector`是堆上的数据，拷贝时应用引用。使用下标访问有可能出现数据越界。
+ + 使用`.get()`方法。`v.get(2)`，不会有越界错误，如果越界会
