--- a/Diary/11.16.md
+++ b/Diary/11.16.md
@@ -9,4 +9,6 @@
  这创建了一个可改变的`vector`，开始时不用说明`v`的数据类型，在`push`时可以推断出来`i32`。  
  关于访问`vector`中的元素:  
  + 下标访问。`let c: &i32 = &v[2]`，`vector`是堆上的数据，拷贝时应用引用。使用下标访问有可能出现数据越界。
- + 使用`.get()`方法。`v.get(2)`，不会有越界错误，如果越界会
+ + 使用`.get()`方法。`v.get(2)`，不会有越界错误，如果越界会返回`none`。
+
+ss
