--- a/Diary/11.18.md
+++ b/Diary/11.18.md
@@ -23,3 +23,141 @@ let banana = ColorClassicStruct{
 ```
 这样`banana`除了`red`其他属性都和`apple`一样了。  
 ### `struct` 方法
+`Rust`把数据和方法分离，使用`impl`关键字来定义方法:  
+```
+fn main() {
+struct Circle {
+    x: f64,
+    y: f64,
+    radius: f64,
+}
+
+impl Circle {
+    // new是Circle的关联函数，因为它不是关键字，而且它的第一个参数不是self，也就没法使用f.new()的形式调用它。
+    // 这种方法往往用于初始化当前结构体的实例
+    fn new(x: f64, y: f64, radius: f64) -> Circle {
+        Circle {
+            x: x,
+            y: y,
+            radius: radius,
+        }
+    }
+
+    // Circle的方法，&self表示借用当前的Circle结构体
+    fn area(&self) -> f64 {
+        std::f64::consts::PI * (self.radius * self.radius)
+    }
+}
+```
+**关于self、&self、&mut self**  
+```
+struct Rectangle {
+    width: u32,
+    height: u32,
+}
+
+impl Rectangle {
+    fn area(&self) -> u32 {
+        self.width * self.height
+    }
+}
+
+fn main() {
+    let rect1 = Rectangle { width: 30, height: 50 };
+
+    println!(
+        "The area of the rectangle is {} square pixels.",
+        rect1.area()
+    );
+}
+```
+**&self**
+方法`area()`的参数是`&self`，当`rect1`调用`area()`方法时，方法的参数就算`Rectangle`类的实例`rect1`本身的引用。
+
+```
+struct Rectangle {
+    width: u32,
+    height: u32,
+}
+
+impl Rectangle {
+    fn area(self) -> u32 {
+        self.width * self.height
+    }
+}
+
+fn main() {
+    let rect1 = Rectangle { width: 30, height: 50 };
+
+    println!(
+        "The area of the rectangle is {} square pixels.",
+        rect1.area()
+    );
+    rect1.area();
+}
+```
+**self**
+如果`area()`方法的参数改为`self`，那么`rect1`实例在`94`行第一次调用`area()`方法时将所有权转移到方法`area()`内。当`96`行第二次调用`rect1.area()`时编译器会报错。
+```
+            let rect1 = Rectangle { width: 30, height: 50 };
+   |         ----- move occurs because `rect1` has type `Rectangle`, which does not implement the `Copy` tra
+...
+94 |         rect1.area()
+   |               ------ `rect1` moved due to this method call
+...
+96 |         rect1.area()
+   |         ^^^^^ value used here after move
+```
+因为`rect1`是`Rectangle`类型即结构体类型，存储在堆上，无法被`Copy`。因此在94行时`rect1`实例的所有权被传递进`area()`方法，96行第二次使用`rect1`时就会出错。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
