--- a/Diary/11.18.md
+++ b/Diary/11.18.md
@@ -49,8 +49,8 @@ impl Circle {
     }
 }
 ```
-**关于self、&self、&mut self**  
-**&self**   
+#### **关于self、&self、&mut self**  
+#### **&self**   
 ```
 struct Rectangle {
     width: u32,
@@ -73,7 +73,7 @@ fn main() {
 }
 ``` 
 方法`area()`的参数是`&self`，当`rect1`调用`area()`方法时，方法的参数就算`Rectangle`类的实例`rect1`本身的引用。  
-**self**  
+#### **self**  
 ```
 struct Rectangle {
     width: u32,
