--- a/Diary/11.18.md
+++ b/Diary/11.18.md
@@ -108,53 +108,31 @@ fn main() {
    |         ^^^^^ value used here after move
 ```
 因为`rect1`是`Rectangle`类型即结构体类型，存储在堆上，无法被`Copy`。因此在94行时`rect1`实例的所有权被传递进`area()`方法，96行第二次使用`rect1`时就会出错。
+#### &mut self
+```
+struct Rectangle {
+    width: u32,
+    height: u32,
+}
 
+impl Rectangle {
+    fn area(&mut self) -> u32 {
+        self.width = 0;
+        self.width * self.height
+    }
+}
 
+fn main() {
+    let mut rect1 = Rectangle { width: 30, height: 50 };
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+    println!(
+        "The area of the rectangle is {} square pixels.",
+        rect1.area()
+    );
+}
+```
+`&mut self`就是可改变实例的方法，注意在初始化实例的时候必须也使用`mut`，即`let mut rect1 = Rectangle { width: 30, height: 50 };`。  
+上方代码中`area()`方法将`rect1`实例的`width`属性修改为`0`,因此计算出的面积也为`0`。
 
 
 
