--- a/Diary/11.20.md
+++ b/Diary/11.20.md
@@ -43,4 +43,24 @@ impl State {
     }
 }
 ```
-用`enum`关键字定义了一个`Message`枚举类型，其中`Quit`成员没有对应的值，`echo/move/ChangeColor`都有对应的值，类似键值对。
+用`enum`关键字定义了一个`Message`枚举类型，其中`Quit`成员没有对应的值，`echo/move/ChangeColor`都有对应的值，类似键值对。  
+`match`语句块中使用`::`访问枚举类型`Message`的成员以及成员对应的值，从而更改`state`类的数据。  
+当我们调用`process`函数时，可能的情况是这样的:  
+```
+state.process(Message::ChangeColor((255, 0, 255)));
+state.process(Message::Echo(String::from("hello world")));
+state.process(Message::Move(Point { x: 10, y: 15 }));
+state.process(Message::Quit);
+```
+我们希望用同一个函数处理多种更改`state`类的“信息”，且每次使用其中的一种成员，因此使用`Message`枚举类型，把所有可能的信息聚在一起。  
+使用枚举类型而不是结构体`Message`的原因是这样的，`process`函数一次仅仅使用`Message`中的一个成员，枚举类型配合`match`可以很方便的找出那个成员，但结构体不行。  
+试想：
+···
+struct Message {
+    Quit,
+    Echo:String,
+    Move:Point)
+    ChangeColor:(u8, u8, u8),
+}
+```
+我们每次改变了`Message`类中的一个成员，其他置空，在`process`函数中找到那个不空的成员比较麻烦。
