--- a/Diary/12.2.md
+++ b/Diary/12.2.md
@@ -22,5 +22,6 @@ let s4 = s1.to_string();
 let s1 = "hello";
 let s2 = String::from(s1);
 let s3 = s2[0..2];
+let s4 = &s2;
 ```
-
+`s3`和`s4`都是&str。
