--- a/Diary/12.2.md
+++ b/Diary/12.2.md
@@ -25,3 +25,58 @@ let s3 = s2[0..2];
 let s4 = &s2;
 ```
 `s3`和`s4`都是&str。
+## 字符串索引和切片
+`Rust`不允许使用索引访问字符串。
+```
+fn main() {
+   let s1 = String::from("hello");
+   let h = s1[0];
+}
+```
+这是因为在`Rust`中，字符串底层是一个`u8`字节数组，按字节来划分。
+```
+fn main() {
+let hello = String::from("中国人");
+let s = hello[0];
+}
+```
+但是一个中文字符占据`3`个字节，当使用`hello[0]来访问时，我们只访问了`中`三个字节中的第一个字节，因此`Rust`不允许这种行为。
+同理，当我们使用切片的时候也要切片索引注意字符字节的划分。
+## 操作字符串
+### 替换(replace)
+`let new_s = s.replace("rust","Rust");`replace`返回一个新的字符串。
+### 连接(concatenate)
+使用`+`或者`+=`连接字符串，要求右边的参数必须为字符串的切片引用`Slice`类型。
+`let new_s = string_1 + &string_2`
+`+`或者`+=`都是返回一个新的字符串。
+### 追加(push)
+`push`直接修改原有的字符串，因此要求字符串是可变`mut`的。
+``` s.puth("abcd")```
+### 插入(insert)
+`insert`也是直接修改原有字符串，因此要求字符串是可变`mut`的。
+```
+fn main() {
+    let mut s = String::from("Hello rust!");
+    s.insert(5, ',');
+    println!("插入字符 insert() -> {}", s);
+    s.insert_str(6, " I like");
+    println!("插入字符串 insert_str() -> {}", s);
+}
+```
+### 删除(delete)
+`pop`删除原字符串最后一个字符并返回
+```
+let mut s = String::from("Hello rust!");
+let poped = s.pop() ;
+```
+`poped`的值为`!`  
+
+`remove`是删除原字符串第`i`个字符,返回值为剩余的字符串
+```
+let mut s = String::from("Hello rust!");
+let poped = s.remove(0);
+```
+`poped`的值为`ello rust!`  
+## 常见的`String`和`&str`类型区分
+
+
