--- a/Diary/12.2.md
+++ b/Diary/12.2.md
@@ -78,5 +78,6 @@ let poped = s.remove(0);
 ```
 `poped`的值为`ello rust!`  
 ## 常见的`String`和`&str`类型区分
-
+![字符串区分](https://github.com/gongchaosheng/2022-os/blob/main/Pictures/%E5%AD%97%E7%AC%A6%E4%B8%B2%E5%8C%BA%E5%88%86.png)
+`to_owned()`是生成`String`类型的方法，·to_string()`调用的`String::from`，`String::from`调用的`to_owned()`。所以to_owned()是实现`String`最本源的方法。
 
