--- a/Diary/12.2.md
+++ b/Diary/12.2.md
@@ -79,5 +79,41 @@ let poped = s.remove(0);
 `poped`的值为`ello rust!`  
 ## 常见的`String`和`&str`类型区分
 ![字符串区分](https://github.com/gongchaosheng/2022-os/blob/main/Pictures/%E5%AD%97%E7%AC%A6%E4%B8%B2%E5%8C%BA%E5%88%86.png)
-  `to_owned()`是生成`String`类型的方法，·to_string()`调用的`String::from`，`String::from`调用的`to_owned()`。所以to_owned()是实现`String`最本源的方法。
+  `to_owned()`是生成`String`类型的方法，·to_string()`调用的`String::from`，`String::from`调用的`to_owned()`。所以`to_owned()`是实现`String`最本源的方法。
+# Rust_Rustlings_Modules
+##包和项目
+`creat`是包，`package`是项目。创建二进制项目:
+```$ cargo new my-project
+     Created binary (application) `my-project` package
+$ ls my-project
+Cargo.toml
+src
+$ ls my-project/src
+main.rs
+```
+`Cargo`为我们创建了一个名称是`my-project`的`Package`,同时在其中创建了`Cargo.toml`文件，可以看一下该文件，里面并没有提到`src/main.rs`作为程序的入口，原因是`Cargo`有一个惯例`src/main.rs`是二进制包的根文件，该二进制包的包名跟所属`package`相同，在这里都是`my-project`，所有的代码执行都从该文件中的`fn main()`函数开始。
+## 模块module
+使用`cargo new --lib restaurant`创建一个小餐馆，注意，这里创建的是一个库类型的`Package`，然后将以下代码放入`src/lib.rs`中：
+```
+fn main() {
+// 餐厅前厅，用于吃饭
+mod front_of_house {
+    mod hosting {
+        fn add_to_waitlist() {}
 
+        fn seat_at_table() {}
+    }
+
+    mod serving {
+        fn take_order() {}
+
+        fn serve_order() {}
+
+        fn take_payment() {}
+    }
+}
+}
+```
+### 使用`use`语句
+![use语句](https://github.com/gongchaosheng/2022-os/blob/main/Pictures/use%E8%AF%AD%E5%8F%A5.png)  
+`*`代表引用`time`模块下的所有东西
