--- a/Diary/12.7.md
+++ b/Diary/12.7.md
@@ -49,7 +49,7 @@ fn build_scores_table(results: String) -> HashMap<String, Team> {
 }
 ```
 主要学习一下`Haspmap`的`entry()`和`or_insert()`方法  
-+ `scores.entry(key)先看哈希表中有没有这个`key`，如果有则`返回`Hashmap scores`中`key`对应的`value`的可变引用`&mut value`。
++ `scores.entry(key)`先看哈希表中有没有这个`key`，如果有则`返回`Hashmap scores`中`key`对应的`value`的可变引用`&mut value`。
 +  如果没有这个`key`则执行`or_insert(value),插入这个`key-value`并返回`key`对应的`value`的可变引用`&mut value`。
 
 
