--- a/Diary/12.7.md
+++ b/Diary/12.7.md
@@ -54,3 +54,64 @@ fn build_scores_table(results: String) -> HashMap<String, Team> {
 
 
 # Rustlings-quiz2
+```
+Strings
+Vecs
+Move semantics
+Modules
+Enums
+```
+```
+pub enum Command {
+    Uppercase,
+    Trim,
+    Append(usize),
+}
+
+mod my_module {
+    use super::Command;
+
+    // TODO: Complete the function signature!
+    pub fn transformer(mut input: Vec<(String, Command)>) -> Vec<String> {
+        // TODO: Complete the output declaration!
+        let mut output: Vec<String> = vec![];
+        //迭代器是可变引用
+        for (string, command) in input.iter() {
+            // TODO: Complete the function body. You can do it!
+            output.push(
+                match command{
+                    Command :: Uppercase => string.to_ascii_uppercase(),
+                    Command :: Trim => string.trim().to_string(),
+                    Command :: Append(i) => {
+                        let mut s = String:: new();
+                        for _x in 0..*i{
+                            s.push_str("bar");
+                        }
+                        string.to_owned() + &s
+                    }
+        
+                }
+            )
+        }
+        output
+    }
+}
+```
+注意迭代器是可变引用，所以`79`行中的`string`字符串也是可变引用。因此`90`行要用`to_owned()`方法转变成`String`类型而不是本来的`&str`类型。
+另外`match`其实会返回值，返回`match`表达式中符合的那个表达式。例如`88`行就把从`&str`类型的小写字符串转换为`String`类型的大写字符串作为返回值了。因此`81`行的
+`output.push()中push的值为string.to_ascii_uppercase()的结果`
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
