--- a/Diary/12.7.md
+++ b/Diary/12.7.md
@@ -97,8 +97,8 @@ mod my_module {
     }
 }
 ```
-注意迭代器是可变引用，所以`79`行中的`string`字符串也是可变引用。因此`90`行要用`to_owned()`方法转变成`String`类型而不是本来的`&str`类型。
-另外`match`其实会返回值，返回`match`表达式中符合的那个表达式。例如`88`行就把从`&str`类型的小写字符串转换为`String`类型的大写字符串作为返回值了。因此`81`行的
+注意迭代器是**可变引用**，所以`79`行中的`string`字符串也是可变引用。因此`90`行要用`to_owned()`方法转变成`String`类型而不是本来的`&str`类型。  
+另外`match`其实会**返回值**，返回`match`表达式中符合的那个表达式。例如`88`行就把从`&str`类型的小写字符串转换为`String`类型的大写字符串作为返回值了。因此`81`行的
 `output.push()中push的值为string.to_ascii_uppercase()的结果`
 
 
