--- a/Diary/12.9.md
+++ b/Diary/12.9.md
@@ -18,3 +18,18 @@ fn main() {
 }
 ```
 如果`a`的值是`Some()`类型，就把`a`的值赋给`x`
+## 所有权
+```
+fn main() {
+    let y: Option<Point> = Some(Point { x: 100, y: 200 });
+
+    match y {
+        //y的所有权转移到p
+        Some(p) => println!("Co-ordinates are {},{} ", p.x, p.y),
+        _ => println!("no match"),
+    }
+    //再次用y时出错，因为所有权给p了
+    y; // Fix without deleting this line.
+}
+```
+解决办法是匹配时使用`ref`，即`Some(ref p)`
