--- a/Diary/12.10.md
+++ b/Diary/12.10.md
@@ -15,4 +15,96 @@ Result是一个枚举类型，成功时返回Ok(T),失败时返回Err(E)
 let item_quantity = "50";
 let qty = item_quantity.parse::<i32>()?;
 ```
-意思是将字符串转换为i32类型，如果成功就赋值给qty，如果失败返回Err
+意思是将字符串转换为i32类型，如果成功就返回Ok(50)赋值给qty，如果失败返回Err。要想取得这个int数字还需要unwrap()方法,
+```
+let num = qty.unwrap()
+```
+## error6
+```
+//用枚举类型集合了两种错误，一种是传入字符串转换后的值小于等于0出现的错误，一种是字符串无法转换为int值的错误。
+enum ParsePosNonzeroError {
+    Creation(CreationError),//<=0
+    ParseInt(ParseIntError)//无法转换为数字
+}
+//为上面的枚举类型实现的方法，用于决定是哪个错误
+impl ParsePosNonzeroError {
+    fn from_creation(err: CreationError) -> ParsePosNonzeroError {
+        ParsePosNonzeroError::Creation(err)
+    }
+    // TODO: add another error conversion function here.
+    // fn from_parseint...
+    fn from_parseint(err: ParseIntError) -> ParsePosNonzeroError{
+        ParsePosNonzeroError::ParseInt(err)
+    }
+}
+//第一个被调用的函数
+fn parse_pos_nonzero(s: &str)
+    -> Result<PositiveNonzeroInteger, ParsePosNonzeroError>
+{
+    // TODO: change this to return an appropriate error instead of panicking
+    // when `parse()` returns an error.
+    //如果传入的字符串s能被转换为数字，就赋值给x，否则报出无法转换错误即ParseInt(err)。
+    let x: i64 = s.parse().map_err(ParsePosNonzeroError::from_parseint)?;
+    //能进行下一步说明s能转换为数字并且赋值给x，则调用new()函数看看x是否<=0，如果是的话就将new()函数返回的错误转换为ParsePosNonzeroError::from_creation类型
+    PositiveNonzeroInteger::new(x)
+        .map_err(ParsePosNonzeroError::from_creation)
+}
+
+// Don't change anything below this line.
+
+#[derive(PartialEq, Debug)]
+struct PositiveNonzeroInteger(u64);
+
+#[derive(PartialEq, Debug)]
+enum CreationError {
+    Negative,
+    Zero,
+}
+
+impl PositiveNonzeroInteger {
+    fn new(value: i64) -> Result<PositiveNonzeroInteger, CreationError> {
+        match value {
+            x if x < 0 => Err(CreationError::Negative),
+            x if x == 0 => Err(CreationError::Zero),
+            x => Ok(PositiveNonzeroInteger(x as u64))
+        }
+    }
+}
+
+#[cfg(test)]
+mod test {
+    use super::*;
+
+    #[test]
+    fn test_parse_error() {
+        // We can't construct a ParseIntError, so we have to pattern match.
+        assert!(matches!(
+            parse_pos_nonzero("not a number"),
+            Err(ParsePosNonzeroError::ParseInt(_))
+        ));
+    }
+
+    #[test]
+    fn test_negative() {
+        assert_eq!(
+            parse_pos_nonzero("-555"),
+            Err(ParsePosNonzeroError::Creation(CreationError::Negative))
+        );
+    }
+
+    #[test]
+    fn test_zero() {
+        assert_eq!(
+            parse_pos_nonzero("0"),
+            Err(ParsePosNonzeroError::Creation(CreationError::Zero))
+        );
+    }
+
+    #[test]
+    fn test_positive() {
+        let x = PositiveNonzeroInteger::new(42);
+        assert!(x.is_ok());
+        assert_eq!(parse_pos_nonzero("42"), Ok(x.unwrap()));
+    }
+}
+```
