--- a/Diary/12.10.md
+++ b/Diary/12.10.md
@@ -26,7 +26,7 @@ enum ParsePosNonzeroError {
     Creation(CreationError),//<=0
     ParseInt(ParseIntError)//无法转换为数字
 }
-//为上面的枚举类型实现的方法，用于决定是哪个错误
+//用户实现的上面的枚举类型实现的方法，用于决定是哪个错误
 impl ParsePosNonzeroError {
     fn from_creation(err: CreationError) -> ParsePosNonzeroError {
         ParsePosNonzeroError::Creation(err)
@@ -37,7 +37,7 @@ impl ParsePosNonzeroError {
         ParsePosNonzeroError::ParseInt(err)
     }
 }
-//第一个被调用的函数
+//库函数
 fn parse_pos_nonzero(s: &str)
     -> Result<PositiveNonzeroInteger, ParsePosNonzeroError>
 {
