--- a/Diary/12.10.md
+++ b/Diary/12.10.md
@@ -108,3 +108,28 @@ mod test {
     }
 }
 ```
+## generics泛型
+让函数、类、方法、结构体等可以使用多种类型的参数
+```
+
+struct Wrapper <T>{
+    value: T,
+}
+
+impl<T> Wrapper <T>{
+    pub fn new (value: T) -> Self {
+        Wrapper { value }
+    }
+}
+```
+## Trait 特征
+`trait`定义了一个行为，只要实现了该`trait`,都可以使用该行为。
+注意：  
++ 使用`impl`为需要的结构实现`trait`行为
++ `trait`可以直接定义默认行为
++ `trait`可以作为函数参数,使得实现此特征的类型都可以作为参数`fn compare_license_types(software: impl Licensed, software_two: impl Licensed) -> bool {}`即实现了`Licensed`特征的类型
++  可以用多个特征作为参数，这样参数类型就能实现多种行为
+```fn some_func(item: impl SomeTrait + OtherTrait) -> bool {
+    item.some_function() && item.other_function()
+    }
+```
