--- a/Diary/12.10.md
+++ b/Diary/12.10.md
@@ -129,7 +129,8 @@ impl<T> Wrapper <T>{
 + `trait`可以直接定义默认行为
 + `trait`可以作为函数参数,使得实现此特征的类型都可以作为参数`fn compare_license_types(software: impl Licensed, software_two: impl Licensed) -> bool {}`即实现了`Licensed`特征的类型
 +  可以用多个特征作为参数，这样参数类型就能实现多种行为
-```fn some_func(item: impl SomeTrait + OtherTrait) -> bool {
-    item.some_function() && item.other_function()
+```
+    fn some_func(item: impl SomeTrait + OtherTrait) -> bool {
+        item.some_function() && item.other_function()
     }
 ```
