--- a/Diary/12.10.md
+++ b/Diary/12.10.md
@@ -134,3 +134,14 @@ impl<T> Wrapper <T>{
         item.some_function() && item.other_function()
     }
 ```
++  泛型也不是所有都行，比如一个满足了参数泛型的类型可能不满足函数内的调用
+
+```
+impl <T: std::fmt::Display> ReportCard <T> {
+    pub fn print(&self) -> String {
+        format!("{} ({}) - achieved a grade of {}",
+            &self.student_name, &self.student_age, &self.grade)
+    }
+}
+```
+比如这段代码如果没有`: std::fmt::Display`就会报错，因为传入的`T`可能不满足`format`的类型要求。
