--- a/Diary/12.10.md
+++ b/Diary/12.10.md
@@ -145,3 +145,25 @@ impl <T: std::fmt::Display> ReportCard <T> {
 }
 ```
 比如这段代码如果没有`: std::fmt::Display`就会报错，因为传入的`T`可能不满足`format`的类型要求。
+## lifetimes 生命周期
+生命周期主要是解决悬垂引用的问题，但是注意生命周期不改变变量实际的作用域，它的作用是使编译器编译通过。
+```
+fn longest<'a>(x: &'a str, y: &'a str) -> &'a str {
+    if x.len() > y.len() {
+        x
+    } else {
+        y
+    }
+}
+
+fn main() {
+    let string1 = String::from("long string is long");
+    let  result;
+    {
+        let string2 = String::from("xyz");
+        result = longest(string1.as_str(), string2.as_str());
+    }
+    println!("The longest string is '{}'", result);
+}
+```
+这里编译不通过是因为`result`可能是`string2`的引用，但是`string2`出了`{}`就结束了生命周期，后面`println!()`调用`result`的时候`result`可能是悬垂引用。
