--- a/Diary/12.11.md
+++ b/Diary/12.11.md
@@ -11,3 +11,20 @@ pub fn capitalize_words_string(words: &[&str]) -> String {
     words.iter().map(|x| capitalize_first(x)).collect()
 }
 ```
+## Box
+Box就是一种指针，能分配堆上的空间。
+```
+pub enum List {
+    Cons(i32, Box<List>),
+    Nil,
+}
+pub fn create_non_empty_list() -> List {
+    let end =Box :: new(List::Nil);
+    let item = List::Cons(2, end);
+    List::Cons(3, Box::new(item))
+}
+```
+用枚举实现了链表，Cons(值，下一个的指针），
+## rc和arc
+rc引用计数，arc线程里的引用计数。  
+## cow clone-on-write
