--- a/Diary/12.11.md
+++ b/Diary/12.11.md
@@ -28,3 +28,6 @@ pub fn create_non_empty_list() -> List {
 ## rc和arc
 rc引用计数，arc线程里的引用计数。  
 ## cow clone-on-write
+
+## 线程
+`thread::spawn{}`返回了一个`handle`，通过`handle.join()`可以阻塞主线程。`lock()`解引用后返回`mutex`内部数据的引用,所以`let mut count = status_shared.lock().unwrap();里的count`是一个可变引用。
